Lots of work. Add the project & project/{name} resources. Includes unit tests and an updated swagger document Does not include acceptance tests Refactor to support a version in the URL and via the directory structure Unit tests really need a mock framework, but haven't found one to work with Mongo that I like yet.
