# routes/v1.js
@@ -3,10 +3,14 @@
 const express = require('express');
 const router = express.Router();
 const about = require('../services/about');
-const apiDocs = require('../api_doc/swaggerDoc');
+const apiDocs = require('../services/swaggerDoc');
+const project = require('../services/v1/project');
 
 router.get('/ping', about.ping);
 router.get('/ping/deep', about.deepPing);
 router.get('/doc', apiDocs.serveDoc);
+
+router.get('/project', project.getProjectSummary);
+router.get('/project/:name', project.getByName);
 
 module.exports = router;
